--- a/recipe-app/src/App.css
+++ b/recipe-app/src/App.css
@@ -9,7 +9,7 @@
 header {
   text-align: center;
   margin-bottom: 40px;
-  font-size: 2em;
+  font-size: 3em;
   color: #333;
 }
 
@@ -21,7 +21,7 @@ header {
 }
 
 .search-bar input {
-  width: 300px;
+  width: 400px;
   padding: 10px;
   font-size: 16px;
   border: 1px solid #ccc;
@@ -49,6 +49,7 @@ header {
   flex-wrap: wrap;
   gap: 20px;
   justify-content: center;
+  cursor: pointer;
 }
 
 .recipe-item {
@@ -64,3 +65,28 @@ header {
 }
 
 
+.recipe-details {
+  text-align: center;
+  padding: 20px;
+} 
+
+.recipe-details img {
+  width: 100%;
+  max-width: 400px;
+  margin-bottom: 20px;
+}
+
+.recipe-details li {
+  margin: 5px 0;
+}
+
+.recipe-details button {
+  margin-top: 20px;
+padding: 10px 20px;
+background-color: #FF6347;
+color: white;
+border: none;
+border-radius: 8px;
+transition: background-color 0.3 ease;
+cursor: pointer;
+}
