--- a/src/App.css
+++ b/src/App.css
@@ -6,13 +6,6 @@
   background-color: #f9f9f9;
 }
 
-header {
-  text-align: center;
-  margin-bottom: 40px;
-  font-size: 3em;
-  color: #333;
-}
-
 .search-bar {
   display: flex;
   justify-content: center;
@@ -97,18 +90,16 @@ cursor: pointer;
  margin: 25px;
   background-color: #333;
   overflow: hidden;
+  display: flex;
+  justify-content: flex-end;
 }
 
 .navbar ul {
   display: flex;
-  justify-content: space-evenly;
+  justify-content: flex-end;
   list-style-type: none; 
   padding: 0; 
   margin: 0; 
-}
-
-.navbar li {
-  
 }
 
 .navbar a {
